# proofforge-media

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev-lock.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt
deploy/cloudflare/: README.md  package-lock.json  package.json  wrangler.jsonc
deploy/cloudflare/src/: index.js
deploy/cloudflare/test/: config.test.mjs
docs/: BRIEF.md  CHECKLIST.md  SUBMISSION.md
proofforge/: __init__.py  config.py  database.py  engine.py  judge.py  main.py  models.py  showcase.py
reports/council/: RECONCILIATION.md
reports/council/post-verification/: anthropic-claude-sonnet-4-6.md  anthropic-claude-sonnet-4-6.raw.md  deepseek-v4-pro.md  deepseek-v4-pro.raw.md  google-gemini-3.1-pro-preview.md  index.json  (+3 more)
reports/integrations/: PROOFFORGE-LIVE-RECEIPT.md  proofforge-live-2026-07-18.json
reports/qa/: RUNTIME-RECEIPTS.md  backblaze-judge-key-2026-07-18.json  proofforge-cloudflare-deployment-8815bef5-2026-07-18.json  proofforge-cloudflare-deployment-8a3da01e-2026-07-18.json  proofforge-cloudflare-deployment-e957abcc-2026-07-18.json  proofforge-cloudflare-deployment-f840c826-2026-07-18.json  proofforge-live-judge-2026-07-18.json  proofforge-public-edge-2026-07-18.json  release-verify.receipt.json
reports/research/: 2026-07-18-live-stack-verification.md
reports/security/: SBOM-RECEIPT.json  proofforge-cloudflare.cdx.json  proofforge.cdx.json
static/: app.js  index.html  styles.css
tests/: test_api.py  test_engine.py  test_judge.py  test_showcase.py
